--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ margin: 2em;
 padding:2em;
 
 }
+.tips img {
+max-width: 270px;
+max-height: 200px;
+    
+    }
+    
 
 h1{
    font: size 5.6rem;
