--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,13 @@ h1{
 .Wildlife{
 
     color:#855704;
-
+   
+    text-align: left;
+    padding: 18% 24%;
+    border-top: 10px solid #ffa949;
+    margin: 105px 0 60px;
+    background: #434a52 url('../img/ani400.jpg') no-repeat center;
+    background-size: cover;
 
 }
 
