--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ h1{
     padding: 18% 24%;
     border-top: 10px solid #ffa949;
     margin: 105px 0 60px;
-    background: #434a52 url('../img/ani400.jpg') no-repeat center;
+    background: #434a52 url('../imgs/ani400.jpg') no-repeat center;
     background-size: cover;
 
 }
