--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-/* box-sizing: border-box; */
+box-sizing: border-box;
 
 }
 
@@ -41,17 +41,19 @@ h1{
 }
 
 .Wildlife{
-
-    color:#855704;
-   
+    color: white;
     text-align: left;
     padding: 18% 24%;
     border-top: 10px solid #ffa949;
     margin: 105px 0 60px;
     background: #434a52 url('../imgs/ani400.jpg') no-repeat center;
-    background-size: cover;
+      background-size: cover;
+ 
+   box-shadow:15px 15px 10px rgba(0,0,0, .8);
+
 
 }
+  
 
 .res, .tips{
 
